--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.example.maven-project</groupId>
     <artifactId>maven-project</artifactId>
-    <version>1.0.${v}-FinalTask</version>
+    <version>1.0-FinalTask</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
