--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -46,20 +46,20 @@ pipeline {
             
         }
     }
-    post {
-        always {
-            // junit 'target/surefire-reports/*.xml'
-            // script { 
-//             githubPRStatusPublisher buildMessage: message(failureMsg: githubPRMessage('Can\'t set status; build failed.'),
-//                 successMsg: githubPRMessage('Can\'t set status; build succeeded.')),
-//                 errorHandler: statusOnPublisherError('UNSTABLE'),
-//                 statusMsg: githubPRMessage('${GITHUB_PR_COND_REF} run ended'),
-//                 statusVerifier: allowRunOnStatus('UNSTABLE'),
-//                 unstableAs: 'FAILURE'
-            githubPRComment comment:
-                githubPRMessage('Build ${BUILD_NUMBER} ${BUILD_STATUS}'), 
-                statusVerifier: allowRunOnStatus("SUCCESS"),
-                errorHandler: statusOnPublisherError("UNSTABLE")
-        }
+//     post {
+//         always {
+//             // junit 'target/surefire-reports/*.xml'
+//             // script { 
+// //             githubPRStatusPublisher buildMessage: message(failureMsg: githubPRMessage('Can\'t set status; build failed.'),
+// //                 successMsg: githubPRMessage('Can\'t set status; build succeeded.')),
+// //                 errorHandler: statusOnPublisherError('UNSTABLE'),
+// //                 statusMsg: githubPRMessage('${GITHUB_PR_COND_REF} run ended'),
+// //                 statusVerifier: allowRunOnStatus('UNSTABLE'),
+// //                 unstableAs: 'FAILURE'
+// //             githubPRComment comment:
+// //                 githubPRMessage('Build ${BUILD_NUMBER} ${BUILD_STATUS}'), 
+// //                 statusVerifier: allowRunOnStatus("SUCCESS"),
+// //                 errorHandler: statusOnPublisherError("UNSTABLE")
+//         }
     }
 }
