--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -24,8 +24,8 @@ pipeline {
             steps {
                 sh 'mvn clean'
             }
-//         }
-//         stage('Test') { 
+        }
+        stage('Test') { 
             steps {
                 sh 'mvn test'
             }
