--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
         git 'Default'
     }
     stages {
-        stage('--- Testing Java Sources ---') {
+        stage('Testing Java Sources') {
             steps {
                 sh 'mvn clean'
 //             }
