--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -6,10 +6,20 @@ pipeline {
         git 'Default'
     }
     stages {
-        stage('--- Testing Java Sources ---') {
+        stage('Testing Java') {
             steps {
                 sh 'mvn clean'
                 sh 'mvn test'
+            }
+        }
+        stage('build') {
+            steps {
+                sh 'pip install -r requirements.txt'
+            }
+        }
+        stage ('Testing Python'){
+            steps {
+                sh 'python unit-test.py'
             }
         }
     }
