--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -12,14 +12,36 @@ pipeline {
                 sh 'mvn test'
             }
         }
-        stage('build') {
-            steps {
-                sh 'pip install -r requirements.txt'
-            }
+//         stage('build') {
+//             steps {
+//                 sh 'pip install -r requirements.txt'
+//             }
         }
+//         stage ('Testing Python'){
+//             steps {
+//                 sh 'python unit-test.py'
+//             }
+//          
         stage ('Testing Python'){
             steps {
-                sh 'python unit-test.py'
+                sh '''#!/bin/bash
+                    echo \'--- Creating Python3 Virtual Environment ---\'
+                    VIRTUAL_ENV_NAME=\'virtual-environment\'
+                    Python3 -m venv $VIRTUAL_ENV_NAME
+
+                    echo \'--- Activating Virtual Environmet ---\'
+                    source $VIRTUAL_ENV_NAME/bin/activate
+
+                    echo \'--- Installing requirements ---\'
+                    pip install -r ./bwg-cli/requirements.txt
+
+                    cd /var/lib/jenkins/workspace/$JOB_NAME/
+
+                    echo \'--- Starting Tests ---\'
+                    pytest ./bwg-cli/test --junitxml=./xmlReport/output.xmlReport
+
+                    echo \'--- Deaktivating Virtual Environment ---\'
+                    deactivate'''
             }
         }
     }
