--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -26,7 +26,7 @@ pipeline {
             steps {
                 echo '--- Creating Python3 Virtual Environment ---'
                 sh '''VIRTUAL_ENV_NAME=\'virtual-environment\'
-                    Python3 -m venv $VIRTUAL_ENV_NAME'''
+                    python3 -m venv $VIRTUAL_ENV_NAME'''
                 echo '--- Activating Virtual Environmet ---'
                 sh 'source $VIRTUAL_ENV_NAME/bin/activate'
                 echo '--- Installing requirements ---'
