--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -26,8 +26,7 @@ pipeline {
             steps {
                 echo '--- Creating Python3 Virtual Environment ---'
                 sh 'printenv'
-                sh'''#!bin/bash
-                    VIRTUAL_ENV_NAME=\'virtual-environment\'
+                sh'''VIRTUAL_ENV_NAME=\'virtual-environment\'
                     python3 -m venv $VIRTUAL_ENV_NAME
                     printenv
                     echo \'--- Activating Virtual Environmet ---\'
