--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -25,14 +25,19 @@ pipeline {
         stage ('Testing Python'){
             steps {
                 echo '--- Creating Python3 Virtual Environment ---'
-                sh 'printenv'
-                sh'''VIRTUAL_ENV_NAME=\'virtual-environment\'
-                    python3 -m venv $VIRTUAL_ENV_NAME
-                    echo \'--- Activating Virtual Environmet ---\'
-                    . $VIRTUAL_ENV_NAME/bin/activate
-                    printenv'''
+                // sh 'printenv'
+                // sh'''python3 -m venv $VIRTUAL_ENV_NAME
+                //     echo \'--- Activating Virtual Environmet ---\'
+                //     . $VIRTUAL_ENV_NAME/bin/activate
+                //     printenv'''
+
+                sh'''PATH=$WORKSPACE/venv/bin:/usr/local/bin:$PATH
+                    if [ ! -d "venv" ]; then
+                    virtualenv --python=python3.7 venv
+                    fi
+                    . $WORKSPACE/venv/bin/activate'''
                 echo '--- Installing requirements ---'
-                sh'''. $VIRTUAL_ENV_NAME/bin/activate
+                sh'''. $WORKSPACE/venv/bin/activate
                     pip install -r ./bwg-cli/requirements.txt
                     cd /var/lib/jenkins/workspace/$JOB_NAME/'''
                 echo '--- Starting Tests ---'
