--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -30,11 +30,11 @@ pipeline {
                     echo \'--- Activating Virtual Environmet ---\'
                     . .env/bin/activate'''
                 echo '--- Installing requirements ---'
-                sh'''. $VIRTUAL_ENV_NAME/bin/activate
+                sh'''. .env/bin/activate
                     pip install -r ./bwg-cli/requirements.txt
                     cd /var/lib/jenkins/workspace/$JOB_NAME/'''
                 echo '--- Starting Tests ---'
-                sh'''. $VIRTUAL_ENV_NAME/bin/activate
+                sh'''. .env/bin/activate
                     pytest ./bwg-cli/test --junitxml=./Report/output.xml
                     echo \'--- Deaktivating Virtual Environment ---\'
                     deactivate'''
